# quizrepo

./: .gitignore  CONTRIBUTING.md  README.md  app.py  pyproject.toml
docs/: admin-guide.md  api-reference.md  architecture.md  deployment.md
docs/adr/: 001-serverless-architecture.md  002-bedrock-quiz-generation.md  003-dual-platform-slack-teams.md  004-dynamodb-storage.md  005-polling-scorer.md
infra/: stack.py  tables.py
lambdas/admin/: handler.py
lambdas/answer_collector/: handler.py
lambdas/quiz_generator/: handler.py
lambdas/results_publisher/: handler.py
lambdas/scorer/: handler.py
lambdas/slack_bot/: handler.py
lambdas/teams_bot/: handler.py
learn-quest/: README.md  app.py  db.py  quiz_gen.py  requirements.txt  routes_admin.py  routes_auth.py  routes_leaderboard.py  routes_quiz.py  scheduler.py
learn-quest/data/: learn_quest.db  learn_quest.db-shm
learn-quest/static/: index.html
quiz-app/: .env.example  .gitignore  DEPLOY.md  README.md  package-lock.json  package.json  requirements.txt  server.js  server.py
quiz-app/data/: leaderboard.json  quiz-2026-04-16.json  results-2026-04-16.json
quiz-app/public/: index.html
shared/: models.py
